Fixed bug where step bar was not aligned correctly #1691

--- a/app/styles/components/layout.scss
+++ b/app/styles/components/layout.scss
@@ -1,4 +1,4 @@
-body.rotate {
+body.rate {
   -webkit-transform: rotate(90deg);
 }
 body {
@@ -27,7 +27,7 @@ body,html{
 		}
 	}
 }
-.grid-content{
+.grid-main{
 	.terms-and-conditions{
 		text-align: center;
 		font-family: myriad-pro-condensed, sans-serif;
